--- a/index.html
+++ b/index.html
@@ -109,12 +109,14 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="https://www.enformed.io/jedituz9" method="post" id="form" class="contact-form"
+								<form action="https://www.enformed.io/jedituz9" >
 									<div>
 										<div class="row">
 											<div class="6u 12u$(mobile)">
 												<input type="text" name="cf_name" placeholder="Name" />
 											</div>
+											<div class="form-group">
+
 											<div class="6u$ 12u$(mobile)">
 												<input type="text" name="cf_email" placeholder="Email" />
 											</div>
