--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="https://www.enformed.io/jedituz9" id="form" class="contact-form">
+								<form action="https://www.enformed.io/jedituz9" method="post" id="form" class="contact-form">
 									<div>
 										<div class="row">
 											<div class="6u 12u$(mobile)">
