--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 											<div class="form-group">
 
 											<div class="6u$ 12u$(mobile)">
-												<input type="text" name="cf_email" placeholder="Email" />
+												<input name="firstName" type="text" class="form-control"/>
 											</div>
 											<div class="12u$">
 												<input type="text" name="cf_subject" placeholder="Subject" />
