--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 								</header>
 								<form action="https://www.enformed.io/jedituz9" method="post" id="form" class="contact-form">
 									<div>
-										<div class="row">
+										<div class="row"><div class="form-group">
 											<div class="6u 12u$(mobile)">
 												<input type="text" name="cf_name" placeholder="Name" />
 											</div>
-											<div class="form-group">
+			
 
 											<div class="6u$ 12u$(mobile)">
-												<input name="firstName" type="text" class="form-control"/>
+												<input type="text" name="cf_email" placeholder="Email" />
 											</div>
 											<div class="12u$">
 												<input type="text" name="cf_subject" placeholder="Subject" />
