--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
 										<div class="row"><div class="form-group">
 											<div class="6u 12u$(mobile)">
 												<input type="text" name="cf_name" placeholder="Name" />
-											</div>
+											</div><br>
 			
 
 											<div class="6u$ 12u$(mobile)">
 												<input type="text" name="cf_email" placeholder="Email" />
-											</div>
+											</div><br>
 											<div class="12u$">
 												<input type="text" name="cf_subject" placeholder="Subject" />
-											</div>
+											</div><br>
 											<div class="12u$">
 												<textarea name="cf_message" placeholder="Message" rows="8"></textarea>
-											</div>
+											</div><br>
 											<div class="12u$">
 												<input type="submit" value="Send Message" target="_blank" />
-											</div>
+											</div><br>
 										</div>
 									</div>
 								</form>
