--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
 									<div>
 										<div class="row"><div class="form-group">
 											<div class="6u 12u$(mobile)">
-												<input type="text" name="cf_name" placeholder="Name" />
+												<input type="text" name="name" placeholder="Name" rows="1" cols="10"></input>
 											</div><br>
 			
 
 											<div class="6u$ 12u$(mobile)">
-												<input type="text" name="cf_email" placeholder="Email" />
+												<input type="text" name="email" placeholder="Email" rows="1" cols="10"></input>
 											</div><br>
 											<div class="12u$">
-												<input type="text" name="cf_subject" placeholder="Subject" />
+												<input type="text" name="subject" placeholder="Subject" rows="1" cols="10"></input>
 											</div><br>
 											<div class="12u$">
-												<textarea name="cf_message" placeholder="Message" rows="8"></textarea>
+												<textarea name="message" placeholder="Message" rows="8" cols="10"></textarea>
 											</div><br>
 											<div class="12u$">
 												<input type="submit" value="Send Message" target="_blank" />
