--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
 									<h2>Work</h2>
 								</header>
 								<p><center>
-									With several years of experience, I am well-versed in generating a variety of digital<br>
-									content, including landing pages, technical pieces, blog posts, product descriptions,<br>
-									social media posts, etc., in a variety of subject areas.<br>
+									With several years of experience, I am well-versed in generating a variety of digital
+									content, including landing pages, technical pieces, blog posts, product descriptions,
+									social media posts, etc., in a variety of subject areas.
 									<br>
-									Specializing in SEO pieces, I will work to increase your website's organic<br>
-									traffic and improve your website's search engine ranking with original, targeted<br>
-									content or with a complete structural overhaul of your website's landing page,<br>
-									organization, presentation, etc. Experienced with both HTML and CSS, as well<br>
-									as other web design languages and frameworks, I actively incorporate popular SEO<br>
-									formatting techniques at every level of a client's web presence.<br>
+									Specializing in SEO pieces, I will work to increase your website's organic
+									traffic and improve your website's search engine ranking with original, targeted
+									content or with a complete structural overhaul of your website's landing page,
+									organization, presentation, etc. Experienced with both HTML and CSS, as well
+									as other web design languages and frameworks, I actively incorporate popular SEO
+									formatting techniques at every level of a client's web presence.
 									<hr>
 									<br>
-									If you're interested in working with me or ordering some content from me please<br>
-									fill out the contact form, within the contact tab. I will assess your description<br>
-									of the work or content needed and quote you a price. All content I produce for you<br>
-									is sold with full-rights/ghostwritten. You permanently acquire all rights to a<br>
+									If you're interested in working with me or ordering some content from me please
+									fill out the contact form, within the contact tab. I will assess your description
+									of the work or content needed and quote you a price. All content I produce for you
+									is sold with full-rights/ghostwritten. You permanently acquire all rights to a
 									piece once it is paid for.<br>
 									<hr>
 									<br>
 									Samples of my writing can be seen below. All samples are hosted on my (designed, created,
-									and maintained solely by me) tech-related blog: <a href="http://www.cscrumbs.com/" target="_blank">CSCrumbs</a>.<br>
+									and maintained solely by me) tech-related blog: <a href="http://www.cscrumbs.com/" target="_blank">CSCrumbs</a>.
 									<br></center>
 								</p>
 								<section>
@@ -113,18 +113,18 @@
 									<div>
 										<div class="row"><div class="form-group">
 											<div class="6u 12u$(mobile)">
-												<input type="text" name="name" placeholder="Name" rows="1" cols="300"></input>
+												<input type="text" name="name" placeholder="Name" rows="1" cols="700"></input>
 											</div><br>
 			
 
 											<div class="6u$ 12u$(mobile)">
-												<input type="text" name="email" placeholder="Email" rows="1" cols="300"></input>
+												<input type="text" name="email" placeholder="Email" rows="1" cols="700"></input>
 											</div><br>
 											<div class="12u$">
-												<input type="text" name="subject" placeholder="Subject" rows="1" cols="300"></input>
+												<input type="text" name="subject" placeholder="Subject" rows="8" cols="700"></input>
 											</div><br>
 											<div class="12u$">
-												<textarea name="message" placeholder="Message" rows="8" cols="1000"></textarea>
+												<textarea name="message" placeholder="Message" rows="8" cols="700"></textarea>
 											</div><br>
 											<div class="12u$">
 												<input type="submit" value="Send Message" target="_blank" />
