--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
 									content, including landing pages, technical pieces, blog posts, product descriptions,
 									social media posts, etc., in a variety of subject areas.
 									<br>
+									<br>
 									Specializing in SEO pieces, I will work to increase your website's organic
 									traffic and improve your website's search engine ranking with original, targeted
 									content or with a complete structural overhaul of your website's landing page,
-									organization, presentation, etc. Experienced with both HTML and CSS, as well
-									as other web design languages and frameworks, I actively incorporate popular SEO
-									formatting techniques at every level of a client's web presence.
+									organization, presentation, etc. 
+									<br>
+									<br>
+									Experienced with both HTML and CSS, as well as various other web design languages and 
+									frameworks, I actively incorporate popular SEO formatting techniques at every level of 
+									a client's web presence.
 									<hr>
 									<br>
 									If you're interested in working with me or ordering some content from me please
