--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<p><center>
 									With several years of experience, I am well-versed in generating a variety of digital
 									content, including landing pages, technical pieces, blog posts, product descriptions,
-									social media posts, etc., in a variety of subject areas.
+									social media posts, etc., in a plethora of subject areas.
 									<br>
 									<br>
 									Specializing in SEO pieces, I will work to increase your website's organic
@@ -59,7 +59,7 @@
 									a client's web presence.
 									<hr>
 									<br>
-									If you're interested in working with me or ordering some content from me please
+									If you're interested in working with me or ordering content please
 									fill out the contact form, within the contact tab. I will assess your description
 									of the work or content needed and quote you a price. All content I produce for you
 									is sold with full-rights/ghostwritten. You permanently acquire all rights to a
