--- a/index.html
+++ b/index.html
@@ -58,17 +58,15 @@
 									frameworks, I actively incorporate popular SEO formatting techniques at every level of 
 									a client's web presence.
 									<hr>
-									<br>
 									If you're interested in working with me or ordering content please
 									fill out the contact form, within the contact tab. I will assess your description
 									of the work or content needed and quote you a price. All content I produce for you
 									is sold with full-rights/ghostwritten. You permanently acquire all rights to a
 									piece once it is paid for.<br>
 									<hr>
-									<br>
 									Samples of my writing can be seen below. All samples are hosted on my (designed, created,
 									and maintained solely by me) tech-related blog: <a href="http://www.cscrumbs.com/" target="_blank">CSCrumbs</a>.
-									<br></center>
+									<br><br></center>
 								</p>
 								<section>
 									<div class="row">
