--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									social media posts, etc., in a plethora of subject areas.
 									<br>
 									<br>
-									Specializing in SEO pieces, I will work to increase your website's organic
+									Specializing in SEO pieces, I work to increase your website's organic
 									traffic and improve your website's search engine ranking with original, targeted
 									content or with a complete structural overhaul of your website's landing page,
 									organization, presentation, etc. 
@@ -60,8 +60,8 @@
 									<hr>
 									If you're interested in working with me or ordering content please
 									fill out the contact form, within the contact tab. I will assess your description
-									of the work or content needed and quote you a price. All content I produce for you
-									is sold with full-rights/ghostwritten. You permanently acquire all rights to a
+									of the work or content needed and quote you a price. All content I produce is sold 
+									with full-rights/ghostwritten. You will permanently acquire all rights to a
 									piece once it is paid for.<br>
 									<hr>
 									Samples of my writing can be seen below. All samples are hosted on my (designed, created,
