--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<header>
 									<h2>Work</h2>
 								</header>
-								<p><center>
+								<p><h3>Experience</h3><center>
 									With several years of experience, I am well-versed in generating a variety of digital
 									content, including landing pages, technical pieces, blog posts, product descriptions,
 									social media posts, etc., in a plethora of subject areas.
@@ -57,14 +57,16 @@
 									<br>
 									Experienced with both HTML and CSS, as well as various other web design languages and 
 									frameworks, I actively incorporate popular SEO formatting techniques at every level of 
-									a client's web presence.
+									a client's web presence.</center>
 									<hr>
+									<h3>Working with Me</h3><center>
 									If you're interested in working with me or ordering content please
 									fill out the contact form, within the contact tab. I will assess your description
 									of the work or content needed and quote you a price. All content I produce is sold 
 									with full-rights/ghostwritten. You will permanently acquire all rights to a
-									piece once it is paid for.<br>
+									piece once it is paid for.<br></center>
 									<hr>
+									<h3>Writing Samples</h3>
 									Samples of my writing can be seen below. All samples are hosted on my (designed, created,
 									and maintained solely by me) tech-related blog: <a href="http://www.cscrumbs.com/" target="_blank">CSCrumbs</a>.
 									<br><br></center>
