--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 									piece once it is paid for.<br></center>
 									<hr>
 									<h3>Writing Samples</h3>
-									Samples of my writing can be seen below. All samples are hosted on my (designed, created,
-									and maintained solely by me) tech-related blog: <a href="http://www.cscrumbs.com/" target="_blank">CSCrumbs</a>.
+									Samples of my writing can be seen below:
 									<br><br></center>
 								</p>
 								<section>
