--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<hr>
 									<h3>Writing Samples</h3>
 									Samples of my writing can be seen below:
-									<br><br></center>
+									<br></center>
 								</p>
 								<section>
 									<div class="row">
