--- a/index.html
+++ b/index.html
@@ -55,16 +55,13 @@
 									organization, presentation, etc. 
 									<br>
 									<br>
-									Experienced with both HTML and CSS, as well as various other web design languages and 
+									Experienced with HTML, CSS and Javascript, as well as various other web design languages and 
 									frameworks, I actively incorporate popular SEO formatting techniques at every level of 
-									a client's web presence.</center>
+									a your web presence.</center>
 									<hr>
 									<h3>Working with Me</h3><center>
 									If you're interested in working with me or ordering content please
-									fill out the contact form, within the contact tab. I will assess your description
-									of the work or content needed and quote you a price. All content I produce is sold 
-									with full-rights/ghostwritten. You will permanently acquire all rights to a
-									piece once it is paid for.<br></center>
+									fill out the contact form, within the contact tab. I will contact you as soon as possible.<br></center>
 									<hr>
 									<h3>Writing Samples</h3>
 									Samples of my writing can be seen below:
