--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									organization, presentation, etc. 
 									<br>
 									<br>
-									Experienced with HTML, CSS and Javascript, as well as various other web design languages and 
+									Experienced with HTML, CSS and JavaScript, as well as various other web design languages and 
 									frameworks, I actively incorporate popular SEO formatting techniques at every level of 
 									a your web presence.</center>
 									<hr>
