--- a/index.html
+++ b/index.html
@@ -97,10 +97,18 @@
 								<img src='pages/ic.png' /></a><br>
 								Badge ID# 67B4E5422D8F4555942099E7CE079388<br><br>
 								<!-- Begin: Google Analytics -->
-								<img src='pages/ganalyticssmall.png' />
+								<a href="images/1.pdf">
+  								<img src="images/1.png">
+								</a>
 								<!-- Begin: Google Adwords -->
-								<img src='pages/gadwordssmall.png' /><br>
-								<a href="https://www.google.com/partners/#i_profile;idtf=108509864237930730310;" target="_blank">My Google Partner Profile</a>
+								<a href="images/2.pdf">
+  								<img src="images/2.png">
+								</a>
+								<!-- Other adwords -->
+								<a href="images/3.pdf">
+  								<img src="images/3.png">
+								</a>
+								
 							
 								</p>
 							</article>
