--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<hr>
 									<h3>Working with Me</h3><center>
 									If you're interested in working with me or ordering content please
-									fill out the contact form, within the contact tab. I will contact you as soon as possible.<br></center>
+									fill out the contact form, within the contact tab. I will reply to any inquiries as soon as possible.<br></center>
 									<hr>
 									<h3>Writing Samples</h3>
 									Samples of my writing can be seen below:
