--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<section>
 									<div class="row">
 										<div class="4u 12u$(mobile)">
-											<a href="https://medium.com/@jillplatts/internet-marketing-methods-for-businesses-and-advertisers-c6577536976c" class="image fit" target="_blank"><img src="images/pic01.jpg" alt="" title="Internet Marketing Tips for Businesses and Advertisers"></a>
+											<a href="https://medium.com/@jillplatts/8-common-saas-sales-mistakes-1f16542dad35" class="image fit" target="_blank"><img src="images/pic01.jpg" alt="" title="8 Common SaaS Sales Mistakes"></a>
 										</div>
 										<div class="4u 12u$(mobile)">
 											<a href="https://medium.com/@jillplatts/what-is-big-data-c0872a53fa62" class="image fit" target="_blank"><img src="images/pic02.jpg" alt="" title="What is Big Data?"></a>
