--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li><p class="copyright">&copy; 2017-2117 Jill Platts. All Rights Reserved.</p></li>
+							<li><p class="copyright">&copy; 2018 Jill Platts. All Rights Reserved.</p></li>
 						</ul>
 					</div>
 
