--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<header>
 									<h2>Work</h2>
 								</header>
-								<p><h3>Experience</h3><center>
+								<p><h3>Experience</h3><center><br>
 									With several years of experience, I am well-versed in generating a variety of digital
 									content, including landing pages, technical pieces, blog posts, product descriptions,
 									social media posts, etc., in a plethora of subject areas.
@@ -58,11 +58,11 @@
 									Experienced with HTML, CSS and JavaScript, as well as various other web design languages and 
 									frameworks, I actively incorporate popular SEO formatting techniques at every level of your web presence.</center>
 									<hr>
-									<h3>Working with Me</h3><center>
+									<h3>Working with Me</h3><center><br>
 									If you're interested in working with me or ordering content please
 									fill out the contact form, within the contact tab. I will reply to any inquiries as soon as possible.<br></center>
 									<hr>
-									<h3>Writing Samples</h3>
+									<h3>Writing Samples</h3><br>
 									Samples of my writing can be seen below:
 									<br></center>
 								</p>
