--- a/index.html
+++ b/index.html
@@ -97,16 +97,12 @@
 								Badge ID# 67B4E5422D8F4555942099E7CE079388<br><br>
 								<hr>	
 								<!-- Begin: Google Analytics -->
-								<a href="images/1.pdf">
+								<a href="images/1.png">
   								<img src="images/1.png">
 								</a>
 								<!-- Begin: Google Adwords -->
-								<a href="images/2.pdf">
+								<a href="images/2.png">
   								<img src="images/2.png">
-								</a>
-								<!-- Other adwords -->
-								<a href="images/3.pdf">
-  								<img src="images/3.png">
 								</a>
 								
 							
