--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 								Badge ID# 67B4E5422D8F4555942099E7CE079388<br><br>
 								<hr>	
 								<!-- Begin: Google Analytics -->
-								<a href="images/1.png">
-  								<img src="images/1.png">
+								<!-- <a href="images/1.png"> -->
+  								<!-- <img src="images/1.png"> -->
 								</a>
 								<!-- Begin: Google Adwords -->
-								<a href="images/2.png">
-  								<img src="images/2.png">
+								<!-- <a href="images/2.png"> -->
+  								<!-- <img src="images/2.png"> -->
 								</a>
 								
 							
