--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work" class="panel">
+							<article id="work" class="panel"> <!-- hi -->
 								<header>
 									<h2>Work</h2>
 								</header>
