--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<!-- <form action="https://www.enformed.io/jedituz9" method="post" id="form" class="contact-form"> -->
+								<form action="https://www.enformed.io/jedituz9" method="post" id="form" class="contact-form">
 									<div>
 										<div class="row"><div class="form-group">
 											<div class="6u 12u$(mobile)">
