--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="https://www.enformed.io/gaayz5tc" method="post" id="form" class="contact-form">
-									<div>
+								<!-- <form action="https://www.enformed.io/gaayz5tc" method="post" id="form" class="contact-form"> -->
+									<!-- <div>
 										<div class="row"><div class="form-group">
 											<div class="6u 12u$(mobile)">
 												<input type="text" name="name" placeholder="Name" rows="1" cols="700"></input>
@@ -133,7 +133,7 @@
 											</div><br>
 											<div class="12u$">
 												<input type="submit" value="Send Message" target="_blank" />
-											</div><br>
+											</div><br> -->
 										</div>
 									</div>
 								</form>
