--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Jill Platts</h1>
-									<p>Freelance Writer/SEO Specialist</p>
+									<p>Freelance Writer & Content Management/Web Design Specialist</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -88,13 +88,9 @@
 								</header>
 								<p><center>
 								<!-- Begin: HubSpot Academy - Content Marketing Badge -->
-								<a href='http://academy.hubspot.com/certification' title='Content Marketing'>
-								<img src='pages/cm.png' /></a><br>
-								Badge ID# 4B84955EBC7D4EF5B9E2F312ECA41090<br>
+								<img src='images/a.png' /></a><br>
 								<!-- Begin: HubSpot Academy - Inbound Badge -->
-								<a href='http://academy.hubspot.com/certification' title='Inbound'>
-								<img src='pages/ic.png' /></a><br>
-								Badge ID# 67B4E5422D8F4555942099E7CE079388<br><br>
+								<img src='images/b.png' /></a><br>
 								<hr>	
 								<!-- Begin: Google Analytics -->
 								<!-- <a href="images/1.png"> -->
