--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Jill Platts</h1>
-									<p>Freelance Writer & Content Management/Web Design Specialist</p>
+									<p>Freelance Writer & 
+									<br>
+									Content Management/Web Design Specialist</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -88,9 +90,9 @@
 								</header>
 								<p><center>
 								<!-- Begin: HubSpot Academy - Content Marketing Badge -->
-								<img src='images/a.png' /></a><br>
+								<img src='images/a1.png' /></a><br>
 								<!-- Begin: HubSpot Academy - Inbound Badge -->
-								<img src='images/b.png' /></a><br>
+								<img src='images/b1.png' /></a><br>
 								<hr>	
 								<!-- Begin: Google Analytics -->
 								<!-- <a href="images/1.png"> -->
