--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 									<h1>Jill Platts</h1>
 									<p>Freelance Writer & 
 									<br>
-									Content Management/Web Design Specialist</p>
+									Content Manager &
+									<br>
+									UI/UX Designer</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -92,7 +94,7 @@
 								<!-- Begin: HubSpot Academy - Content Marketing Badge -->
 								<img src='images/a1.png' /></a><br>
 								<!-- Begin: HubSpot Academy - Inbound Badge -->
-								<img src='images/b1.png' /></a><br>
+								<img src='images/a2.png' /></a><br>
 								<hr>	
 								<!-- Begin: Google Analytics -->
 								<!-- <a href="images/1.png"> -->
