--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="Refresh" content="0; url=https://www.jillmplatts.com">
+    <meta http-equiv="Refresh" content="0; url=www.jillmplatts.com">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.jillmplatts.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="www.jillmplatts.com">click here</a>.</p>
 </body>
 </html>
 
